--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Lua DUI Menü</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: rgba(0,0,0,0.5);
-            font-family: Arial, sans-serif;
-        }
-        #menu {
-            position: absolute;
-            top: 10%;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 300px;
-            max-height: 500px;
-            overflow-y: auto;
-            background: #222;
-            border-radius: 10px;
-            padding: 10px;
-        }
-        .item {
-            background: #444;
-            color: #fff;
-            padding: 10px;
-            margin-bottom: 5px;
-            cursor: pointer;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .item:hover {
-            background: #666;
-        }
-    </style>
-</head>
-<body>
-    <div id="menu"></div>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FiveM DUI UI</title>
+        <style>
+            #container {
+                width: 300px;
+                height: 400px;
+                overflow-y: scroll;
+                border: 1px solid black;
+            }
 
-    <script src="menu.js"></script>
-</body>
+            .item {
+                height: 50px;
+                padding: 10px;
+                margin: 5px;
+                background-color: lightgray;
+                border: 1px solid #ccc;
+            }
+
+            .hidden {
+                display: none;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="container">
+            <div class="item">Option 1</div>
+            <div class="item">Option 2</div>
+            <div class="item">Option 3</div>
+            <div class="item">Option 4</div>
+            <div class="item">Option 5</div>
+            <!-- More items can go here -->
+        </div>
+
+        <script>
+            // Listen for messages sent from the Lua script
+            window.addEventListener("message", function (event) {
+                if (event.data.type === "moveDown") {
+                    moveToNextOption();
+                }
+            });
+
+            // Move the UI to the next option (e.g., scroll down the container)
+            function moveToNextOption() {
+                const container = document.getElementById("container");
+                const firstItem = container.querySelector(".item"); // Get the first option
+
+                // Optionally, move down by adjusting the scroll position
+                container.scrollTop += firstItem.offsetHeight; // Scroll down by one item height
+            }
+        </script>
+    </body>
 </html>
