--- a/index.html
+++ b/index.html
@@ -7,21 +7,14 @@
         <style>
             #container {
                 width: 300px;
-                height: 400px;
-                overflow-y: scroll;
                 border: 1px solid black;
             }
 
             .item {
-                height: 50px;
+                height: 25px;
                 padding: 10px;
-                margin: 5px;
                 background-color: lightgray;
-                border: 1px solid #ccc;
-            }
-
-            .hidden {
-                display: none;
+                border: 1px solid #b99a9a;
             }
         </style>
     </head>
@@ -32,7 +25,6 @@
             <div class="item">Option 3</div>
             <div class="item">Option 4</div>
             <div class="item">Option 5</div>
-            <!-- More items can go here -->
         </div>
 
         <script>
