--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             .item {
                 height: 25px;
                 padding: 10px;
-                background-color: lightgray;
-                border: 1px solid #b99a9a;
+                background-color: rgb(24, 119, 28);
+                border: 1px solid #000000;
                 transition: background-color 0.3s; /* Weicher Übergang */
             }
 
