--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FiveM DUI UI</title>
         <style>
+            body {
+                margin: 100px;
+            }
             #container {
                 width: 300px;
                 border: 1px solid black;
