--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <style>
             body {
                 margin: 300px 300px;
-                font-family: Courier, monospace;
+                font-family: "Lucida Sans", "Lucida Sans Regular",
+                    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,
+                    sans-serif;
             }
             #container {
                 width: 370px;
@@ -18,11 +20,10 @@
                 align-items: center;
                 padding: 15px;
                 background-color: rgb(95, 97, 95);
-                transition: background-color 0.3s;
             }
 
             .highlighted {
-                background-color: #ffd700; /* Goldene Farbe für Hervorhebung */
+                background-color: #f8d823; /* Goldene Farbe für Hervorhebung */
             }
         </style>
     </head>
