--- a/index.html
+++ b/index.html
@@ -3,41 +3,56 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>FiveM DUI UI</title>
+        <title>My Dui</title>
         <style>
+            @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
             body {
                 margin: 300px 300px;
-                font-family: "Lucida Sans", "Lucida Sans Regular",
-                    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,
-                    sans-serif;
+                font-family: "Inter", sans-serif;
             }
-            #container {
+            .menucontainer {
                 width: 370px;
                 border: 1px solid black;
-                height: 200px; /* Fixe Höhe für Scrollen */
-                overflow-y: scroll;
             }
             .item {
                 display: flex;
                 align-items: center;
-                padding: 15px;
-                background-color: rgb(95, 97, 95);
+                padding: 8px;
+                background-color: #414141;
+            }
+            .highlighted {
+                background-color: #3af823ad;
             }
 
-            .highlighted {
-                background-color: #f8d823; /* Goldene Farbe für Hervorhebung */
+            .banner {
+                width: 100%;
+                height: 80px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 1.5rem;
+                background-color: rgb(0, 0, 0);
+                color: white;
+            }
+            .footer {
+                width: 100%;
+                height: 20px;
+                background-color: rgb(0, 0, 0);
             }
         </style>
     </head>
     <body>
-        <div id="container">
-            <div class="item">Player</div>
-            <div class="item">Online</div>
-            <div class="item">Vehicle</div>
-            <div class="item">Combat</div>
-            <div class="item">Visual</div>
+        <div class="menucontainer">
+            <div class="banner">Banner</div>
+            <div id="container">
+                <div class="item">Player</div>
+                <div class="item">Online</div>
+                <div class="item">Combat</div>
+                <div class="item">Visual</div>
+                <div class="item">Vehicle</div>
+            </div>
+            <div class="footer"></div>
         </div>
-
         <script>
             let currentIndex = 0; // Start-Index für die hervorgehobene Option
 
@@ -91,13 +106,6 @@
                 if (event.data.type === "moveUp") {
                     moveToNextOptionUp(); // Rufe die Funktion zum Weiterschalten auf
                 }
-                if (event.data.type === "openMenu") {
-                    document.body.style.display = "block"; // Menü sichtbar machen
-                    highlightCurrentOption(); // Erste Option hervorheben
-                }
-                if (event.data.type === "closeMenu") {
-                    document.body.style.display = "none"; // Menü verstecken
-                }
             });
 
             // Initiale Hervorhebung der ersten Option
@@ -105,4 +113,3 @@
         </script>
     </body>
 </html>
-
